--- a/requirements.txt
+++ b/requirements.txt
@@ -23,3 +23,37 @@ trio-websocket==0.9.2
 typing-extensions==4.3.0
 urllib3==1.26.11
 wsproto==1.1.0
+
+(venv) C:\Users\danie\PycharmProjects\slack_two\stagetwo>cd ..
+
+(venv) C:\Users\danie\PycharmProjects\slack_two>pip list
+Package             Version
+------------------- ---------
+asgiref             3.6.0
+async-generator     1.10
+attrs               22.1.0
+certifi             2022.6.15
+cffi                1.15.1
+cryptography        37.0.4
+css                 0.1
+Django              3.2.18
+djangorestframework 3.14.0
+h11                 0.13.0
+idna                3.3
+outcome             1.2.0
+pip                 21.1.2
+pycparser           2.21
+pyOpenSSL           22.0.0
+PySocks             1.7.1
+pytz                2022.7.1
+selenium            4.3.0
+setuptools          57.0.0
+sniffio             1.2.0
+sortedcontainers    2.4.0
+sqlparse            0.4.3
+trio                0.21.0
+trio-websocket      0.9.2
+typing-extensions   4.3.0
+urllib3             1.26.11
+wheel               0.36.2
+wsproto             1.1.0
